force-app/main/default/objects/copado__Promotion__c/fields/cmcSf__Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling this, you can see the source files deployed (as part of this promotion) to the destination org on your git repository branch named copadoDebug/&lt;PromotionNumber&gt;</description>
    <inlineHelpText>Enabling this, you can see the source files deployed (as part of this promotion) to the destination org on your git repository branch named copadoDebug/&lt;PromotionNumber&gt;</inlineHelpText>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>