force-app/main/default/objects/copado__Promotion__c/fields/cmcSf__Ignore_Rollback_Deployment_Warnings__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Ignore_Rollback_Deployment_Warnings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, deployment warnings in rollback will be ignored and the deployment will only fail if errors are returned</description>
    <inlineHelpText>When checked, deployment warnings in rollback will be ignored and the deployment will only fail if errors are returned</inlineHelpText>
    <label>Ignore Rollback Deployment Warnings</label>
    <type>Checkbox</type>
</CustomField>