force-app/main/default/objects/copado__Promotion__c/fields/cmcSf__Last_Rollback_Execution_Id__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Last_Rollback_Execution_Id__c</fullName>
    <label>Last Rollback Execution Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>