force-app/main/default/objects/copado__Promotion__c/fields/cmcSf__Recreate_Promotion_Branch__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Recreate_Promotion_Branch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When performing the merge, if a promotion branch exists, it will be re-created from the target branch. Otherwise the existing promotion branch would be used (Default).</description>
    <label>Recreate Promotion Branch</label>
    <type>Checkbox</type>
</CustomField>