force-app/main/default/objects/copado__Promotion__c/fields/cmcSf__Rollback_Status__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Rollback_Status__c</fullName>
    <label>Rollback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Progress (Validation Only)</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Validation Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>