force-app/main/default/objects/copado__Promotion__c/fields/cmcSf__Rolled_Back_Date__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Rolled_Back_Date__c</fullName>
    <label>Rolled Back Date</label>
    <type>Date</type>
</CustomField>