force-app/main/default/objects/copado__Promotion__c/fields/cmcSf__Validate_Deploy_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Validate_Deploy_Request_Id__c</fullName>
    <inlineHelpText>After a validation, if Quick Deploy is available on the target org, this field contains the validation id. If the promotion is deployed, the quick deploy will be used automatically.</inlineHelpText>
    <label>Validate Deploy Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>