force-app/main/default/objects/copado__Promotion__c/fields/copado__Connection_Behavior__c.field-meta.xml
<CustomField>
    <fullName>copado__Connection_Behavior__c</fullName>
    <label>Connection Behavior</label>
    <length>18</length>
    <type>Text</type>
</CustomField>