force-app/main/default/objects/copado__Promotion__c/fields/copado__Create_Full_Profiles_Step__c.field-meta.xml
<CustomField>
    <fullName>copado__Create_Full_Profiles_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox if you wish to move added permission sets to a Full Permission Sets step. Doing this will remove the permission sets from the Metadata step.</inlineHelpText>
    <label>Create Full Profiles Step</label>
    <type>Checkbox</type>
</CustomField>