force-app/main/default/objects/copado__Promotion__c/fields/copado__Destination_Org_Credential__c.field-meta.xml
<CustomField>
    <fullName>copado__Destination_Org_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The destination credential that will be used when creating the deployment. This credential is auto-populated based on the pipeline linked to the project.</inlineHelpText>
    <label>Destination Credential</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>copado__Org__c.copado__Environment__c</field>
            <operation>equals</operation>
            <valueField>$Source.copado__Destination_Environment__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Promotions (Destination Credential)</relationshipLabel>
    <relationshipName>Promotions2</relationshipName>
    <type>Lookup</type>
</CustomField>