force-app/main/default/objects/copado__Promotion__c/fields/copado__Merge_Conflict__c.field-meta.xml
<CustomField>
    <fullName>copado__Merge_Conflict__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this promotion includes a manual conflict resolution.</inlineHelpText>
    <label>Merge Conflict</label>
    <type>Checkbox</type>
</CustomField>