force-app/main/default/objects/copado__Promotion__c/fields/copado__Order_by__c.field-meta.xml
<CustomField>
    <fullName>copado__Order_by__c</fullName>
    <inlineHelpText>Populate this field to set an ascending or descending merge order for user stories during forward promotions (e.g., copado__Priority__c asc). For back promotions, this field is ignored as user stories will automatically be merged in the same order they were merged during their original forward promotion.</inlineHelpText>
    <label>Order User Stories by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>