force-app/main/default/objects/copado__Promotion__c/fields/copado__Override_Destination_Changes__c.field-meta.xml
<CustomField>
    <fullName>copado__Override_Destination_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled, files from the source environment will be deployed directly, overriding any work in progress in the destination environment. When disabled, Copado will check for work in progress and prompt for conflict resolution if changes are detected.</inlineHelpText>
    <label>Override Destination Changes</label>
    <type>Checkbox</type>
</CustomField>