force-app/main/default/objects/copado__Promotion__c/fields/copado__Pipeline__c.field-meta.xml
<CustomField>
    <fullName>copado__Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field only in Source Format Pipelines to enable advanced user story grouping:

- To group user stories from different projects within the same release: Select a Release (with no associated Project) and Pipeline

- To group user stories from any project and release: Select only Pipeline.

Leave this field empty for standard promotions using Project and/or Release fields.</inlineHelpText>
    <label>Pipeline</label>
    <referenceTo>copado__Deployment_Flow__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>