force-app/main/default/objects/copado__Promotion__c/fields/copado__Platform__c.field-meta.xml
<CustomField>
    <fullName>copado__Platform__c</fullName>
    <formula>IF(NOT(ISBLANK( copado__Pipeline__c )),
    TEXT(copado__Pipeline__r.copado__Platform__c),
    IF(NOT(ISBLANK( copado__Project__c )),  
        TEXT(copado__Project__r.copado__Deployment_Flow__r.copado__Platform__c),
        IF(NOT(ISBLANK( copado__Release__c )),  
            TEXT(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Platform__c), 
            &apos;Salesforce&apos;
        )
    )
)</formula>
    <inlineHelpText>This field auto-populates and displays the pipeline platform.</inlineHelpText>
    <label>Platform</label>
    <type>Text</type>
</CustomField>