force-app/main/default/objects/copado__Promotion__c/fields/copado__Promotion_Method__c.field-meta.xml
<CustomField>
    <fullName>copado__Promotion_Method__c</fullName>
    <inlineHelpText>Select how to synchronize changes with the environments: Environment Sync copies files directly from the source environment&apos;s branch, reducing conflict resolution overhead; Classic Promotion uses individual feature branches to promote changes, requiring sequential merge and conflict resolution for each branch.</inlineHelpText>
    <label>Promotion Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Environment Sync</fullName>
            </value>
            <value>
                <fullName>Classic Promotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>