force-app/main/default/objects/copado__Promotion__c/fields/copado__Pull_Requests_Approved__c.field-meta.xml
<CustomField>
    <fullName>copado__Pull_Requests_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pull Requests Approved</label>
    <type>Checkbox</type>
</CustomField>