force-app/main/default/objects/copado__Promotion__c/fields/copado__Release__c.field-meta.xml
<CustomField>
    <fullName>copado__Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will provide the ability to deploy User Stories within a Release.</description>
    <label>Release</label>
    <referenceTo>copado__Release__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>