force-app/main/default/objects/copado__Promotion__c/fields/copado__Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>copado__Source_Environment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Environment</label>
    <referenceTo>copado__Environment__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>