force-app/main/default/objects/copado__Promotion__c/fields/copado__View_in_Git__c.field-meta.xml
<CustomField>
    <fullName>copado__View_in_Git__c</fullName>
    <description>Link to the User Story promotion branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</description>
    <formula>HYPERLINK(IF(AND(NOT(ISNULL(copado__Pipeline__r.copado__Git_Repository__r.copado__Branch_Base_URL__c)),copado__Pipeline__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;),IF(AND(NOT(ISPICKVAL(copado__Pipeline__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;&apos;)),NOT(ISPICKVAL(copado__Pipeline__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),copado__Pipeline__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;promotion/&apos; + Name,IF(CONTAINS(copado__Pipeline__r.copado__Git_Repository__r.copado__Branch_Base_URL__c, &apos;[BRANCH_NAME]&apos;),SUBSTITUTE(copado__Pipeline__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;promotion/&apos; + Name),copado__Pipeline__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;promotion/&apos; + Name)),IF(AND(NOT(ISNULL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c)),copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;),IF(AND(NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;&apos;)),NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;promotion/&apos; + Name,IF(CONTAINS(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c, &apos;[BRANCH_NAME]&apos;),SUBSTITUTE(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;promotion/&apos; + Name),copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;promotion/&apos; + Name)),IF(AND(NOT(ISNULL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c)),copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;),IF(AND(NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;&apos;)),NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;promotion/&apos; + Name,IF(CONTAINS(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c, &apos;[BRANCH_NAME]&apos;),SUBSTITUTE(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;promotion/&apos; + Name),copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;promotion/&apos; + Name)),&apos;&apos;))),&apos;promotion/&apos; + Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to the User Story promotion branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</inlineHelpText>
    <label>View in Git</label>
    <type>Text</type>
</CustomField>